--- a/src/home.html
+++ b/src/home.html
@@ -74,7 +74,7 @@
 </ul>
 
 <a href="" class="huodon">
-    <img src="https://newhome.oss-cn-beijing.aliyuncs.com/%E4%BC%98%E6%83%A0%E5%88%B8banner.png" alt="">
+    <img src="https://newhome.oss-cn-beijing.aliyuncs.com/%E4%BC%98%E6%83%A0%E5%88%B8banner.png?x-oss-process=image/resize,h_300" alt="">
 </a>
 
 
